# aoc

2015/: Cargo.toml
2015/src/: main.rs
2021/Day1/: CMakeLists.txt
2021/Day1/src/: main.cpp  measurements.cpp  measurements.hpp
2021/Day1/test/: measurements_test.cpp
2021/Day2/: CMakeLists.txt
2021/Day2/src/: main.cpp  measurements.cpp  measurements.hpp
2021/Day2/test/: measurements_test.cpp
2021/Day3/: CMakeLists.txt
2021/Day3/src/: main.cpp  measurements.cpp
2021/Day3/test/: measurements_test.cpp
2021/Day4/: CMakeLists.txt
2021/Day4/src/: main.cpp  measurements.cpp  measurements.hpp
2021/Day4/test/: measurements_test.cpp
2021/Day5/: CMakeLists.txt
2021/Day5/src/: main.cpp  measurements.cpp
2021/Day5/test/: measurements_test.cpp
2021/Day6/: CMakeLists.txt
2021/Day6/src/: main.cpp  measurements.cpp  measurements.hpp
2021/Day6/test/: measurements_test.cpp
2021/Day7/: .gitignore  CMakeLists.txt
2021/Day7/src/: main.cpp  measurements.cpp  (+1 more)
2021/Day8/: CMakeLists.txt
2021/Day8/src/: main.cpp  measurements.cpp
2021/Day8/test/: measurements_test.cpp
2021/Day9/: CMakeLists.txt
2022/d1/: d1.py  d1_test.py  input_sample.txt  pyproject.toml
2022/d10/: d10.py
2022/d11/: d11.py
2022/d2/: d2.py  d2_test.py  pyproject.toml
2022/d3/: d3.py  d3_test.py  pyproject.toml
2022/d4/: d4.py
2022/d5/: d5.py  input.txt
2022/d6/: d6.py
2022/d7/: d7.py
2022/d8/: d8.py
2022/d9/: d9.py
2023/01/: input_sample_ex2.txt  main.py
2023/02/: main.py
2023/03/: input_sample_ex.txt  main.py
2023/04/: main.py
2024/01/: main.py
2024/02/: main.py
2025/: .gitignore  Cargo.toml
2025/src/: main.rs
utils/: cheat_sheet_parsing.txt
(+5 files in other folders)
